Http methods working correctly - User Story number 3 finished no tests